--- a/src/app/controlEquipos/mantenimiento-list/mantenimiento-list.component.html
+++ b/src/app/controlEquipos/mantenimiento-list/mantenimiento-list.component.html
@@ -8,28 +8,29 @@
   <input type="text" [formControl]="searchControl" placeholder="Buscar por número de serie del equipo" />
   <button type="button" class="btn btn-secondary" (click)="cargarMantenimientos()">Mostrar Todos</button>
 </div>
- <!-- Botón para descargar PDF de asignaciones -->
-    <button class="btn btn-warning  m-3 bi bi-file-earmark-arrow-down-fill" (click)="descargarPdfMantenimiento()"> Reporte General</button>
+<!-- Botón para descargar PDF de asignaciones -->
+<button class="btn btn-warning  m-3 bi bi-file-earmark-arrow-down-fill" (click)="descargarPdfMantenimiento()"> Reporte
+  General</button>
 
 
 <div class="d-flex justify-content-between align-items-start">
 
   <!-- Botón para agregar personal (solo visible para administradores) -->
   <div *ngIf="isAdmin" class="m-3 w-25">
-   <button class="btn btn-success m-3 w-100 bi bi-plus-circle" (click)="abrirModalAgregar()"> Agregar</button>
- </div>
+    <button class="btn btn-success m-3 w-100 bi bi-plus-circle" (click)="abrirModalAgregar()"> Agregar</button>
+  </div>
 
- <!-- Botones alineados a la izquierda -->
- <div>
-   <!-- Botón para alternar orden -->
-   <button class="btn btn-secondary bi bi-arrow-down-up m-3" (click)="alternarOrden()"></button>
-   
-   <!-- Botón para ir al Dashboard -->
-   <button class="btn btn-primary m-3 bi bi-house-fill" (click)="irAlDashboard()"> Inicio</button>
-   <!-- Botón para cerrar sesión -->
-   <button class="btn btn-danger m-3 bi bi-door-closed-fill" (click)="cerrarSesion()"> Salir</button>
-   
- </div>
+  <!-- Botones alineados a la izquierda -->
+  <div>
+    <!-- Botón para alternar orden -->
+    <button class="btn btn-secondary bi bi-arrow-down-up m-3" (click)="alternarOrden()"></button>
+
+    <!-- Botón para ir al Dashboard -->
+    <button class="btn btn-primary m-3 bi bi-house-fill" (click)="irAlDashboard()"> Inicio</button>
+    <!-- Botón para cerrar sesión -->
+    <button class="btn btn-danger m-3 bi bi-door-closed-fill" (click)="cerrarSesion()"> Salir</button>
+
+  </div>
 
 </div>
 <!-- Mensajes de éxito -->
@@ -49,54 +50,57 @@
 </div>
 
 <!-- Spinner de carga -->
-  <div *ngIf="!loading">
-<table class="table table-striped m-3">
-  <thead>
-    <tr>
-      <th>Fecha</th>
-      <th>Actividad Realizada</th>
-      <th>Equipo</th>
-      <th>Acciones</th>
-      <th>Reportes</th>
+<div *ngIf="!loading">
+  <table class="table table-striped m-3">
+    <thead>
+      <tr>
+        <th>Fecha</th>
+        <th>Actividad Realizada</th>
+        <th>Equipo</th>
+        <th>Acciones</th>
+        <th>Reportes</th>
 
-    </tr>
-  </thead>
-  <tbody class="table-group-divider">
-    <tr *ngFor="let mantenimiento of mantenimientosList">
-      <td>{{ mantenimiento.fecha }}</td>
-      <td>{{ mantenimiento.actividadRealizada }}</td>
-  
-      <td>
-        
-        <ng-container *ngIf="Array.isArray(mantenimiento.equipo) && mantenimiento.equipo.length > 0">
-          <span *ngFor="let equipo of mantenimiento.equipo; let last = last">
-            {{ equipo.numeroSerie }} - {{ equipo.modelo }} - {{equipo.tipo}} - {{ equipo.color }}<span *ngIf="!last">, </span>
-          </span>
-        </ng-container>
-      
-        <!-- Si mantenimiento.equipo es un único objeto -->
-        <ng-container *ngIf="!Array.isArray(mantenimiento.equipo) && mantenimiento.equipo">
-          {{ mantenimiento.equipo.numeroSerie }} - {{ mantenimiento.equipo.modelo }} - {{mantenimiento.equipo.tipo}} - {{ mantenimiento.equipo.color }}
-        </ng-container>
-      </td>
-      
-      <td>
-        <button *ngIf="isAdminOrModerador"  class="btn btn-info me-3" (click)="abrirModalEditar(mantenimiento)"><i class="bi bi-pencil"></i></button>
-        <button *ngIf="isAdmin"  class="btn btn-danger me-3" (click)="mantenimiento.id && eliminarMantenimiento(mantenimiento.id)"><i class="bi bi-trash"></i></button>
-        <button class="btn btn-primary me-3" (click)="abrirModalVer(mantenimiento)"><i class="bi bi-eye"></i></button>
-      
-      </td>
-      <td>  
-        <button
-          class="btn btn-warning me-3 bi bi-file-earmark-arrow-down-fill"
-          (click)="descargarReporteMantenimientosPorEquipo(mantenimiento)"
-          [disabled]="!mantenimiento.equipo?.id"> <!-- Deshabilita si no hay equipo o ID -->
-        
-        </button>
-      </td>
-    </tr>
-  </tbody>
-</table>
+      </tr>
+    </thead>
+    <tbody class="table-group-divider">
+      <tr *ngFor="let mantenimiento of mantenimientosList">
+        <td>{{ mantenimiento.fecha }}</td>
+        <td>{{ mantenimiento.actividadRealizada }}</td>
+
+        <td>
+
+          <ng-container *ngIf="Array.isArray(mantenimiento.equipo) && mantenimiento.equipo.length > 0">
+            <span *ngFor="let equipo of mantenimiento.equipo; let last = last">
+              {{ equipo.numeroSerie }} - {{ equipo.modelo }} - {{equipo.tipo}} - {{ equipo.color }}<span *ngIf="!last">,
+              </span>
+            </span>
+          </ng-container>
+
+          <!-- Si mantenimiento.equipo es un único objeto -->
+          <ng-container *ngIf="!Array.isArray(mantenimiento.equipo) && mantenimiento.equipo">
+            {{ mantenimiento.equipo.numeroSerie }} - {{ mantenimiento.equipo.modelo }} - {{mantenimiento.equipo.tipo}} -
+            {{ mantenimiento.equipo.color }}
+          </ng-container>
+        </td>
+
+        <td>
+          <button *ngIf="isAdminOrModerador" class="btn btn-info me-3" (click)="abrirModalEditar(mantenimiento)"><i
+              class="bi bi-pencil"></i></button>
+          <button *ngIf="isAdmin" class="btn btn-danger me-3"
+            (click)="mantenimiento.id && eliminarMantenimiento(mantenimiento.id)"><i class="bi bi-trash"></i></button>
+          <button class="btn btn-primary me-3" (click)="abrirModalVer(mantenimiento)"><i class="bi bi-eye"></i></button>
+
+        </td>
+        <td>
+          <button class="btn btn-warning me-3 bi bi-pc-display-horizontal"
+            (click)="descargarReporteMantenimientosPorEquipo(mantenimiento)" [disabled]="!mantenimiento.equipo?.id">
+            <!-- Deshabilita si no hay equipo o ID -->
+
+          </button>
+        </td>
+      </tr>
+    </tbody>
+  </table>
 </div>
 
 <!-- Modal para agregar o editar mantenimiento -->
@@ -107,19 +111,21 @@
     <h3>{{ isEditMode ? 'Editar Mantenimiento' : 'Agregar Mantenimiento' }}</h3>
 
     <form (ngSubmit)="guardarMantenimiento()" *ngIf="selectedMantenimiento">
-      
+
       <label for="fecha">Fecha de Mantenimiento:</label>
-      <input type="date" class="custom-date-input" id="fecha" name="fecha" [(ngModel)]="selectedMantenimiento.fecha" required>
+      <input type="date" class="custom-date-input" id="fecha" name="fecha" [(ngModel)]="selectedMantenimiento.fecha"
+        required>
 
-      
+
       <label for="actividadRealizada">Actividad Realizada:</label>
-      <textarea id="actividadRealizada" name="actividadRealizada" [(ngModel)]="selectedMantenimiento.actividadRealizada" required></textarea>
+      <textarea id="actividadRealizada" name="actividadRealizada" [(ngModel)]="selectedMantenimiento.actividadRealizada"
+        required></textarea>
 
-      
+
       <label for="evidencia">Evidencia:</label>
       <input type="text" id="evidencia" name="evidencia" [(ngModel)]="selectedMantenimiento.evidencia" required>
 
-      
+
       <label for="equipos">Equipos:</label>
       <select class="custom-select" [(ngModel)]="selectedMantenimiento.equipo" name="equipos">
         <option *ngFor="let equipo of equiposList" [ngValue]="equipo">
@@ -127,14 +133,15 @@
         </option>
       </select>
 
-        <label for="personal">Asignado a:</label>
+      <label for="personal">Asignado a:</label>
       <select class="custom-select" [(ngModel)]="selectedMantenimiento.personal" name="personal">
+        <option [ngValue]="null"> Sin asignar</option>
         <option *ngFor="let personal of personalList" [ngValue]="personal">
           {{ personal.nombre }}
         </option>
       </select>
 
-      
+
       <div class="buttons">
         <button class="btn btn-success me-3" type="submit">Guardar</button>
         <button class="btn btn-danger" type="button" (click)="cerrarModal()">Cancelar</button>
@@ -160,13 +167,13 @@
       {{ selectedMantenimiento?.equipo?.tipo }}-
       {{ selectedMantenimiento?.equipo?.color }}
     </p>
-    
-<p *ngIf="selectedMantenimiento?.personal">
-      <strong>Equipo:</strong>
-      {{ selectedMantenimiento?.personal?.nombre }} 
+
+    <p *ngIf="selectedMantenimiento?.personal">
+      <strong>Asignado a:</strong>
+      {{ selectedMantenimiento?.personal?.nombre }}
     </p>
 
-   
+
   </div>
 </div>
 
