--- a/src/app/controlEquipos/asignacion-list/asignacion-list.component.html
+++ b/src/app/controlEquipos/asignacion-list/asignacion-list.component.html
@@ -14,10 +14,11 @@
 
 
 <!-- BOTÓN PARA ABRIR EL MODAL EXCEL -->
+ <div *ngIf="isAdmin">
 <button class="btn btn-outline-primary bi bi-file-earmark-excel-fill" (click)="abrirModalExportar()">
   Exportar Equipos por Estado
 </button>
-
+</div>
 
 
 
