--- a/src/app/controlEquipos/equipo-list/equipo-list.component.html
+++ b/src/app/controlEquipos/equipo-list/equipo-list.component.html
@@ -11,9 +11,11 @@
 </div>
 
 <!-- BOTÓN PARA ABRIR EL MODAL EXCEL -->
+  <div *ngIf="isAdmin">
 <button class="btn btn-outline-primary bi bi-file-earmark-excel-fill" (click)="abrirModalExportar()">
   Exportar Equipos por Estado
 </button>
+</div>
 
 <div class="d-flex justify-content-between align-items-start">
 
