--- a/src/app/controlEquipos/equipo-list/equipo-list.component.html
+++ b/src/app/controlEquipos/equipo-list/equipo-list.component.html
@@ -60,7 +60,7 @@
         <th>Número de Serie</th>
         <th>Tipo</th>
         <th>Marca</th>
-        <!--    <th>Color</th>-->
+        <th>Color</th>
         <th>Modelo</th>
         <!--    <th>Procesador</th>-->
         <!--   <th>RAM</th>-->
@@ -76,7 +76,7 @@
         <td>{{ equipo.numeroSerie }}</td>
         <td>{{ equipo.tipo }}</td>
         <td>{{ equipo.marca }}</td>
-        <!-- <td>{{ equipo.color }}</td>-->
+        <td>{{ equipo.color }}</td>
         <td>{{ equipo.modelo }}</td>
         <!-- <td>{{ equipo.procesador }}</td>-->
         <!--   <td>{{ equipo.ram }} GB</td>-->
